@@ -4,7 +4,7 @@
 // Modified by Ola Skavhaug 2008.
 //
 // First added:  2007-04-30
-// Last changed: 2008-05-08
+// Last changed: 2008-05-23
 
 #ifndef __SOLVE_H
 #define __SOLVE_H
@@ -12,6 +12,7 @@
 #include <dolfin/common/types.h>
 #include "SolverType.h"
 #include "PreconditionerType.h"
+#include "NormalizationType.h"
 
 namespace dolfin
 {  
@@ -25,6 +26,9 @@ namespace dolfin
 
   /// Compute residual ||Ax - b||
   real residual(const GenericMatrix& A, const GenericVector& x, const GenericVector& b);
+
+  /// Normalize vector according to given normalization type
+  real normalize(GenericVector& x, NormalizationType normalization_type=norm);
   
   /// Solve linear system Ax = b
   //void solve(const PETScKrylovMatrix& A, PETScVector& x, const PETScVector& b);
